force-app/main/default/objects/OrderItem/fields/Billable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Billable_Quantity__c</fullName>
    <label>Billable Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>