force-app/main/default/objects/OrderItem/fields/Cancelled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Quantity__c</fullName>
    <label>Cancelled Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>