force-app/main/default/objects/OrderItem/fields/Cancelled_Special_Tax__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Special_Tax__c</fullName>
    <label>Cancelled Special Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>