force-app/main/default/objects/OrderItem/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>