force-app/main/default/objects/OrderItem/fields/Configuration_Description__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Description__c</fullName>
    <label>Configuration Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>