force-app/main/default/objects/OrderItem/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Schedule</label>
    <referenceTo>Delivery_Schedule__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>