force-app/main/default/objects/OrderItem/fields/Disposable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Fee__c</fullName>
    <label>Disposable Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>