force-app/main/default/objects/OrderItem/fields/DOS_Order_num__c.field-meta.xml
<CustomField>
    <fullName>DOS_Order_num__c</fullName>
    <label>DOS Order num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>