force-app/main/default/objects/OrderItem/fields/DOS_Unit_Num__c.field-meta.xml
<CustomField>
    <fullName>DOS_Unit_Num__c</fullName>
    <label>DOS Unit Num</label>
    <length>5</length>
    <type>Text</type>
</CustomField>