force-app/main/default/objects/OrderItem/fields/Item_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Item_Rejection_Reason__c</fullName>
    <label>Item Rejection Reason</label>
    <length>70</length>
    <type>Text</type>
</CustomField>