force-app/main/default/objects/OrderItem/fields/Item_Tax__c.field-meta.xml
<CustomField>
    <fullName>Item_Tax__c</fullName>
    <label>Item Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>