force-app/main/default/objects/OrderItem/fields/OMS_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>OMS_Order_Id__c</fullName>
    <label>OMS Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>