force-app/main/default/objects/OrderItem/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <label>Product Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>