force-app/main/default/objects/OrderItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>OrderItem</fullName>
            </value>
            <value>
                <fullName>PAWarranty</fullName>
            </value>
            <value>
                <fullName>InstallationService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>