force-app/main/default/objects/OrderItem/fields/Reason_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Category_Code__c</fullName>
    <label>Reason Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>