force-app/main/default/objects/OrderItem/fields/Salescheck_Number__c.field-meta.xml
<CustomField>
    <fullName>Salescheck_Number__c</fullName>
    <label>Salescheck Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>