force-app/main/default/objects/OrderItem/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>Net_Unit_Price__c *  Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>