force-app/main/default/objects/OrderItem/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <formula>( Tax__c * Quantity) + Disposable_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>