force-app/main/default/objects/OrderItem/fields/Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value__c</fullName>
    <externalId>true</externalId>
    <label>Unique Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>