force-app/main/default/objects/OrderItem/validationRules/OrderPending.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderPending</fullName>
    <active>true</active>
    <description>Order is Pending, record is locked</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Integration&quot;, TEXT(Order.Status) = &#39;Pending&#39;)</errorConditionFormula>
    <errorMessage>Order is Pending, record is locked</errorMessage>
</ValidationRule>